# ga-wphase

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  pytest.ini  run-or-build-container.sh  setup.py
.github/workflows/: test.yml
docker/: Dockerfile  README.md  configure_wphase_image.sh  install_dependencies.sh  requirements.txt
scripts/: wphase
tests/: add_validation_case.py  conftest.py  ga2023fsbydd-result.json  ga2023fsbydd-sc3.xml  test_azimuthal_gap.py  test_bandpass.py  test_fdsn_runner.py  test_remove_gappy_traces.py  test_runner_fdsn.py  test_runwphase.py  test_seiscomp.py  test_validation.py  update_validation_cases.py  validation_cases.json  validation_cases.py
tests/bandpass/: generate.py
tests/bandpass/0/: after.npy  before.npy  params.json
tests/bandpass/1/: after.npy  before.npy  params.json
tests/bandpass/2/: after.npy  before.npy  params.json
tests/bandpass/3/: after.npy  before.npy  params.json
tests/bandpass/4/: after.npy  before.npy  params.json
tests/bandpass/5/: after.npy  before.npy  params.json
tests/waveforms/: duplicates.mseed  duplicates.txt
wphase/: .gitignore  __init__.py  _runner_fdsn.py  aws.py  cli.py  data_acquisition.py  email.py  fetch_inventory.py  logger.py  plotting.py  result.py  seiscomp.py  settings.py  settings_schema.py  wputils.py
wphase/psi/: .gitignore  __init__.py  bandpass.py  core.py  datautils.py  decimate.py  exceptions.py  greens.py  inventory.py  libtau.txt  model.py  parallel_util.py  plotutils.py  seismoutils.py  taup_fortran.py
